<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_local_phone_black_24dp"
        android:title="About Us" />

</menu>
