<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".UserUpdateActivity">


    <ImageView
        android:id="@+id/imageupdate"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:scaleType="centerCrop"
        android:src="@drawable/person" />

    <EditText
        android:id="@+id/etuptfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp" />

    <EditText
        android:id="@+id/etuptsecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="300sp"
        android:layout_height="50sp "
        android:layout_gravity="center"
        android:background="@drawable/button_rounded"
        android:text="Click TO Update" />


</LinearLayout>